Updated readme tutorial